[PN-16211] feat: introduced dependencies for springboot-3 and changed pom and tests